Make the scrollbar thinner to fix #6 issue

--- a/public/css/vanillaSelectBox.css
+++ b/public/css/vanillaSelectBox.css
@@ -53,8 +53,7 @@
     user-select: none;
     list-style: none;
     white-space: nowrap;
-    margin: 0px;
-    margin-top: 4px;
+    margin: 4px 0 0;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 3px;
@@ -103,6 +102,7 @@ li.disabled {
 
 .vsb-main ul {
     white-space: nowrap;
+    scrollbar-width: thin;
 }
 
 .vsb-menu li {
@@ -159,7 +159,7 @@ li.disabled {
     border: 1px solid;
     border-radius: 3px;
     padding: 7px;
-    margin-top: 0px;
+    margin-top: 0;
     color: black;
 }
 
